packages/webassemblyjs/test/fixtures/type-errors/if-different-branches/module.wast
(module
	(func (param i32) (result i32)
		(if	(result i32)
			(then (i32.const))
			(else (f32.const))
		)
	)
)
